--- a/docroot/themes/humsci/humsci_basic/src/scss/partials/utilities/_fonts.scss
+++ b/docroot/themes/humsci/humsci_basic/src/scss/partials/utilities/_fonts.scss
@@ -44,6 +44,10 @@
   @include hb-link--inline;
 }
 
+.hb-highlighted-label {
+  align-items: baseline
+}
+
 .hb-highlighted-label .field-label {
   @include hb-field-label--featured;
 }
